# C-Unit-Tests-Using-Unity-Framework

./: CMakeLists.txt  README.md  build_script.sh
api/: calculator.h
src/: calculator.c
test/: Test_Calculator.c
